--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./django_project:/app
     command: >
       sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+             daphne -b 0.0.0.0 -p 8000 config.asgi:application"
     environment:
       - DB_ENGINE=django.db.backends.postgresql
       - DB_HOST=db
@@ -25,6 +25,8 @@ services:
       - ALLOWED_HOSTS=localhost,127.0.0.1,app
     depends_on:
       - db
+    networks:
+      - trolleys-network
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -37,6 +39,8 @@ services:
       - db
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+    networks:
+      - trolleys-network
 
   db:
     image: postgres:13-alpine
@@ -48,7 +52,13 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - trolleys-network
 
 volumes:
   postgres-data:
   pgadmin-data:
+
+networks:
+  trolleys-network:
+    driver: bridge
